--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     
-    <!-- 基础 SEO Meta 标签 -->
-    <title>Seedance - 前端应用</title>
-    <meta name="description" content="Seedance 前端应用" />
-    <meta name="keywords" content="Seedance" />
-    <meta name="author" content="Seedance Team" />
+    <!-- 基础 SEO Meta 标签（首屏/爬虫回退，各页由 React Helmet 覆盖） -->
+    <title>Seedance2 - AI 图生视频平台 | 字节豆包</title>
+    <meta name="description" content="Seedance2 是一站式 AI 图生视频平台，基于字节豆包模型，提供专业图生视频与文生视频服务。" />
+    <meta name="keywords" content="Seedance2, 图生视频, AI图生视频, 文生视频, 视频生成, AI视频, 字节豆包" />
+    <meta name="author" content="Seedance2" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow" />
     <meta name="bingbot" content="index, follow" />
@@ -18,8 +18,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Seedance" />
-    <meta name="application-name" content="Seedance" />
+    <meta name="apple-mobile-web-app-title" content="Seedance2" />
+    <meta name="application-name" content="Seedance2" />
     <meta name="format-detection" content="telephone=no" />
     
     <!-- 图标和 PWA -->
@@ -55,8 +55,8 @@
   <body>
     <noscript>
       <div style="padding: 20px; text-align: center; font-family: sans-serif;">
-        <h1>Seedance</h1>
-        <p>您需要启用 JavaScript 才能使用 Seedance 的全部功能。</p>
+        <h1>Seedance2</h1>
+        <p>您需要启用 JavaScript 才能使用 Seedance2 的全部功能。</p>
       </div>
     </noscript>
     <div id="root"></div>
